--- a/simulacion.html
+++ b/simulacion.html
@@ -29,40 +29,10 @@
         >
       </div>
     </header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Simulador de Creditos®</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li id="menu-nva-op" class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="formulario.html"
-                >Nueva Operacion</a
-              >
-            </li>
-            <li id="feriados" class="nav-item">
-              <a class="nav-link" aria-current="page" href="">Feriados</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="formulario.html">Volver</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <nav
+      id="menu_naveg"
+      class="navbar navbar-expand-lg navbar-dark bg-dark"
+    ></nav>
     <main>
       <div id="resultado"></div>
     </main>
@@ -80,6 +50,7 @@
       integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/jquery-3.6.0.js"></script>
     <script src="./js/objetos.js"></script>
     <script src="./js/operaciones.js"></script>
     <script src="./js/dom.js"></script>
