--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Desafio Clase 14 y 3era entrega - Proyecto Integrador</title>
+    <title>Proyecto Integrador Final</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -19,9 +19,7 @@
   <body id="Pantalla" class="container-fluid">
     <header>
       <h1>SIMULADOR BANCARIO</h1>
-      <h2 class="cartelTitulo">
-        Desafio Clase 14 y 3era entrega - Proyecto Integrador
-      </h2>
+      <h2 class="cartelTitulo">Proyecto Final</h2>
       <div class="text-center">
         <span id="usuario"></span>
         <span id="desconectar" class="d-none"
@@ -29,63 +27,21 @@
         >
       </div>
     </header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Simulador de Creditos®</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li id="menu-nva-op" class="nav-item">
-              <a
-                class="nav-link disabled"
-                href="#"
-                tabindex="-1"
-                aria-disabled="true"
-                >Nueva Operacion</a
-              >
-            </li>
-            <li id="feriados" class="nav-item">
-              <a
-                class="nav-link disabled"
-                tabindex="-1"
-                aria-disabled="true"
-                href="#"
-                >Feriados</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"
-                >Volver</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <nav
+      id="menu_naveg"
+      class="navbar navbar-expand-lg navbar-dark bg-dark"
+    ></nav>
     <main>
-      <section id="ingreso" class="row justify-content-center">
-        <article id="caja_ingreso" class="col-8 col-md-6 col-lg-3 text-center">
-          <h3>Ingresa tu nombre para operar</h3>
-          <input id="nombre" type="text" value="diego" />
-          <button type="button" id="btn_nombre">Ingresar</button>
-          <div id="errorNombre" class="error"></div>
-        </article>
-      </section>
+      <section id="ingreso" class="row justify-content-center"></section>
     </main>
     <footer>
       <h2>Curso de JavaScript - Proyecto Integrador</h2>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
@@ -96,6 +52,7 @@
       integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/jquery-3.6.0.js"></script>
     <script src="./js/objetos.js"></script>
     <script src="./js/operaciones.js"></script>
     <script src="./js/dom.js"></script>
