cambio Index a minuscula index

--- a/Index.html
+++ b/Index.html
@@ -57,5 +57,6 @@
     <script src="./js/operaciones.js"></script>
     <script src="./js/dom.js"></script>
     <script src="./js/login.js"></script>
+    <p>hola</p>
   </body>
 </html>
