--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <h1>SIMULADOR BANCARIO</h1>
       <h2 class="cartelTitulo">Proyecto Final</h2>
-      <div class="text-center">
+      <div id="bienvenida" class="text-center">
         <span id="usuario"></span>
         <span id="desconectar" class="d-none"
           ><a href="index.html">Logoff</a></span
