--- a/simulacion.html
+++ b/simulacion.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Desafio Clase 14 y 3era entrega - Proyecto Integrador</title>
+    <title>Proyecto Integrador Final</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -17,12 +17,11 @@
     <link rel="stylesheet" href="./css/estilo.css" />
   </head>
   <body id="Pantalla" class="container-fluid">
+    <div id="mensajeria" class="alerta d-none"></div>
     <header>
       <h1>SIMULADOR BANCARIO</h1>
-      <h2 class="cartelTitulo">
-        Desafio Clase 14 y 3era entrega - Proyecto Integrador
-      </h2>
-      <div class="text-center">
+      <h2 class="cartelTitulo">Proyecto Final</h2>
+      <div id="bienvenida" class="text-center">
         <span id="usuario"></span>
         <span id="desconectar" class="d-none"
           ><a href="index.html">Logoff</a></span
