se mejoro mensaje alerta en logoff

--- a/formulario.html
+++ b/formulario.html
@@ -16,15 +16,15 @@
     />
     <link rel="stylesheet" href="./css/estilo.css" />
   </head>
-  <body id="Pantalla" class="container-fluid">
+  <body id="pantalla" class="container-fluid">
     <div id="mensajeria" class="alerta d-none"></div>
     <header>
       <h1>CARGA DE OPERACION</h1>
       <h2 class="cartelTitulo">Proyecto Final</h2>
       <div id="bienvenida" class="text-center">
         <span id="usuario"></span>
-        <span id="desconectar" class="d-none"
-          ><a href="index.html">Logoff</a></span
+        <span id="desconectar" class="d-none" value=""
+          ><a href="#">Logoff</a></span
         >
       </div>
     </header>
@@ -32,7 +32,7 @@
       id="menu_naveg"
       class="navbar navbar-expand-lg navbar-dark bg-dark"
     ></nav>
-    <main>
+    <main id="contenido">
       <form id="formu_operacion"></form>
       <form id="formu_cheques"></form>
       <div id="error"></div>
