--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     />
     <link rel="stylesheet" href="./css/estilo.css" />
   </head>
-  <body id="Pantalla" class="container-fluid">
+  <body id="pantalla" class="container-fluid">
+    <div id="mensajeria" class="alerta d-none"></div>
     <header>
       <h1>SIMULADOR BANCARIO</h1>
       <h2 class="cartelTitulo">Proyecto Final</h2>
       <div id="bienvenida" class="text-center">
         <span id="usuario"></span>
-        <span id="desconectar" class="d-none"
-          ><a href="index.html">Logoff</a></span
+        <span id="desconectar" class="d-none" value=""
+          ><a href="#">Logoff</a></span
         >
       </div>
     </header>
@@ -31,7 +32,7 @@
       id="menu_naveg"
       class="navbar navbar-expand-lg navbar-dark bg-dark"
     ></nav>
-    <main>
+    <main id="contenido">
       <section id="ingreso" class="row justify-content-center"></section>
     </main>
     <footer>
