corrigio pie de pagina y caja cheques

--- a/formulario.html
+++ b/formulario.html
@@ -37,7 +37,7 @@
       <form id="formu_cheques"></form>
       <div id="error"></div>
     </main>
-    <footer>
+    <footer id="pie">
       <h2>Curso de JavaScript - Proyecto Integrador</h2>
     </footer>
     <script
