--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main id="contenido">
       <section id="ingreso" class="row justify-content-center"></section>
     </main>
-    <footer>
+    <footer id="pie">
       <h2>Curso de JavaScript - Proyecto Integrador</h2>
     </footer>
     <script
