--- a/simulacion.html
+++ b/simulacion.html
@@ -35,7 +35,7 @@
     <main id="contenido">
       <div id="resultado"></div>
     </main>
-    <footer>
+    <footer id="pie">
       <h2>Curso de JavaScript - Proyecto Integrador</h2>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
