se corrigio vista y alert y pie de pagina

--- a/simulacion.html
+++ b/simulacion.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="./css/estilo.css" />
   </head>
   <body id="pantalla" class="container-fluid">
-    <div id="mensajeria" class="alerta d-none"></div>
     <header>
       <h1>SIMULADOR BANCARIO</h1>
       <h2 class="cartelTitulo">Proyecto Final</h2>
@@ -33,6 +32,9 @@
       class="navbar navbar-expand-lg navbar-dark bg-dark"
     ></nav>
     <main id="contenido">
+      <div id="caja_mensajeria">
+        <div id="mensajeria" class="alerta d-none"></div>
+      </div>
       <div id="resultado"></div>
     </main>
     <footer id="pie">
