--- a/feriados.html
+++ b/feriados.html
@@ -22,9 +22,7 @@
       <h2 class="cartelTitulo">Proyecto Final</h2>
       <div class="text-center">
         <span id="usuario"></span>
-        <span id="desconectar" class="d-none"
-          ><a href="index.html">Logoff</a></span
-        >
+        <span id="desconectar" class="d-none"><a href="#">Logoff</a></span>
       </div>
     </header>
     <nav
@@ -32,6 +30,9 @@
       class="navbar navbar-expand-lg navbar-dark bg-dark"
     ></nav>
     <main>
+      <div id="caja_mensajeria">
+        <div id="mensajeria" class="alerta d-none"></div>
+      </div>
       <section id="tabla_feriados"></section>
     </main>
     <footer>
