--- a/formulario.html
+++ b/formulario.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="./css/estilo.css" />
   </head>
   <body id="pantalla" class="container-fluid">
-    <div id="mensajeria" class="alerta d-none"></div>
     <header>
       <h1>CARGA DE OPERACION</h1>
       <h2 class="cartelTitulo">Proyecto Final</h2>
@@ -33,6 +32,9 @@
       class="navbar navbar-expand-lg navbar-dark bg-dark"
     ></nav>
     <main id="contenido">
+      <div id="caja_mensajeria">
+        <div id="mensajeria" class="alerta d-none"></div>
+      </div>
       <form id="formu_operacion"></form>
       <form id="formu_cheques"></form>
       <div id="error"></div>
