control de tipeo y carga de fechas

--- a/formulario.html
+++ b/formulario.html
@@ -62,5 +62,6 @@
     <script src="./js/dom.js"></script>
     <script src="./js/operaciones.js"></script>
     <script src="./js/formulario.js"></script>
+    <script src="./js/control_tipeo_fechas.js"></script>
   </body>
 </html>
