se corrigio logoff

--- a/feriados.html
+++ b/feriados.html
@@ -22,7 +22,9 @@
       <h2 class="cartelTitulo">Proyecto Final</h2>
       <div class="text-center">
         <span id="usuario"></span>
-        <span id="desconectar" class="d-none"><a href="#">Logoff</a></span>
+        <button type="button" id="desconectar" class="d-none" value="">
+          Logoff
+        </button>
       </div>
     </header>
     <nav
