--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <h2 class="cartelTitulo">Proyecto Final</h2>
       <div id="bienvenida" class="text-center">
         <span id="usuario"></span>
-        <span id="desconectar" class="d-none" value=""
-          ><a href="#">Logoff</a></span
-        >
+        <button type="button" id="desconectar" class="d-none" value="">
+          Logoff
+        </button>
       </div>
     </header>
     <nav
